fix select2 buttons fix content header link padding and add text overflow fix form login ico when error displayed fix upload item mobile view

--- a/app/assets/stylesheets/blocks/content/_header.sass
+++ b/app/assets/stylesheets/blocks/content/_header.sass
@@ -28,9 +28,10 @@
 .content-header-link
   position: relative
   display: block
-  padding: 12px 20px
+  padding: 12px 70px 12px 20px
   color: $content-header-link-color
   font-weight: bold
   font-size: em(20)
   line-height: 25px
   box-sizing: border-box
+  +to(block)
