--- a/app/assets/stylesheets/blocks/login/form/_label.sass
+++ b/app/assets/stylesheets/blocks/login/form/_label.sass
@@ -3,7 +3,7 @@
     position: absolute
     overflow: hidden
     top: 50%
-    transform: translateY(-50%)
+    margin-top: -9px
     +ti
 
     &.email
